<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvName" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNamedPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnNamedPictureClick"
            android:text="@string/btnNamedPicture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUnnamedPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnUnnamedPictureClick"
            android:text="@string/btnUnnamedPicture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvSeconds"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/etSeconds"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            android:text="@string/etSeconds" />

        <CheckBox
            android:id="@+id/cbHighDefinition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbHighDefinition" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/btnVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnVideoClick"
            android:text="@string/btnVideo" />

        <Button
            android:id="@+id/btnFTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btnFTPClick"
            android:text="@string/btnFTP" />

        <ProgressBar
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:id="@+id/pbFTP"
            android:visibility="gone"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_weight="6.37" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPicture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <VideoView
            android:id="@+id/vvVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
